--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -36,3 +36,27 @@
     transform: rotate(360deg);
   }
 }
+
+body {
+  margin: 0;
+  padding: 0;
+}
+
+div {
+  overflow: hidden;
+  box-sizing: border-box;
+}
+
+.grid {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  
+}
+.cell {
+  flex: 0 0 32%;
+  height: 100px;
+  border-radius: 15px;
+  margin-bottom: 5px;
+  border: 1px solid grey;
+}
